- New commiter to the project <kaveh.ahmadian@gmail.com> 
- New commiter to the project <dekani@gmail.com>
- Added eject parameter to settings
- Non puplic test of makemkv binarys release 1.6.2
- build debian packages for 32 / 64 of makemkv 1.6.2
- New parameter to use a file as a source
- psp and iphone transcoding do not longer ask for a directory to store.
- mkv and h264-low transcoding do not longer ask for a directory to store.
- remaing processes do not longer ask for directory to store.
- dvd-psp.sh changes to the code / cancel detection 
- dvd-iphone.sh changes to the code / cancel detection 
- dvd-low.sh changes to the code / cancel detection
- dvd-mkv.sh changes to the code / cancel detection
- All shell-scripts from Transcoding Window portet 
- dvd-resque.sh changes to the code / cancel detection
- Uploaded Licence-File 0.6.16 
- dvd-iso-sh changes to the code / cancel detection 
- Add parameter <string id="32083"> to the settings
- All shell-scripts are now integrated into the working-thread
- Add parameter <string id="32084"> to the settings
- Disable automatic transcode of dvd's inside main-menu
- Add parameter <string id="32085"> to the settings
- Disable check for expired makemkv licence 
  (This should only be set for users that have a regular licence and do not 
   use the beta key !!!!!)
- Added parameter for notifications progress
- XBMC 10.0 Dharma today published.The current release will be tested extremly 
  on this release. All future releases of this addon need a least XBMC 10.0 Dharma.

Fixes: 

- Typo inside german description addon.xml
- Fixed ugly bug with dvd-vcopy.sh and dvd volume-names 
  that have spaces inside the name (fixed and tested)
- Typo inside setup.sh fixed for 32 makemkv (thanks to Chip2786)
- Before we exit the script we have to be sure that thread2 is not 
  longer running.
- Variable JOBFILE was wrong insid dvd-iso.sh
- Error inside dvd-vcopy.sh on line 274
- Addon needs release 35650 of xbmc 


